added output files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ Experiments/Data/TextGrids.tgz
 Experiments/Code/PYTHON/AUDITORY/extractor.py
 Experiments/Code/scripts/figureOutRMS.py
 Experiments/Code/acoustic-analysis/logs/
+Experiments/callExperiments/outputs/
